--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "php": "^7.1"
   },
   "require-dev": {
-    "phpunit/phpunit": "^6.0.8 || ^5.7.15"
+    "phpunit/phpunit": "^7.0"
   },
   "config": {
     "bin-dir": "bin"
